Changed error reporting and added openUrl route
